# tick-engine

./: .gitignore  ARTICLE.md  CLAUDE.md  README.md  TICK_EXTENSIONS_SPEC.md  pyproject.toml
.github/workflows/: test.yml
.serena/: project.yml
.serena/memories/: code_style.md  codebase_structure.md  project_purpose.md  suggested_commands.md  task_completion.md  tech_stack.md
docs/: API.md  ARTICLE.md  GAME_IDEAS.md
examples/colony-sim/: README.md  main.py  pyproject.toml
examples/colony-sim/game/: abilities.py  blueprints.py  callbacks.py  chronicle.py  commands.py  components.py  guards.py  setup.py  systems.py  terrain.py  transitions.py
examples/colony-sim/ui/: constants.py  effects.py  grid.py  hud.py  log_panel.py  sidebar.py
examples/easing-gallery/: .gitignore  README.md  main.py  pyproject.toml
examples/easing-gallery/game/: callbacks.py  components.py  guards.py  spawner.py
examples/easing-gallery/ui/: constants.py  curves.py  lanes.py  orbs.py  sandbox.py  status.py
examples/ecosystem-arena/: README.md  main.py  pyproject.toml
examples/ecosystem-arena/game/: components.py  setup.py  systems.py
examples/llm-roundtable/: clients.py  pyproject.toml  roundtable.py
examples/llm-smoke/: pyproject.toml  smoke_lmstudio.py  smoke_mock.py
examples/physics-sandbox/: README.md  main.py  pyproject.toml
examples/placement/: README.md  main.py  pyproject.toml
examples/placement/game/: buildings.py  commands.py  components.py  handlers.py  mapgen.py  terrain.py
examples/placement/ui/: constants.py  feedback.py  palette.py  renderer.py  status.py
