[project]
name = "tick-engine"
version = "0.14.0"
description = "Minimal tick engine ecosystem"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = ["pytest>=8.0", "mypy>=1.11"]

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
addopts = ["--import-mode=importlib"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = [
    "tick",
    "tick_colony",
    "tick_schedule",
    "tick_fsm",
    "tick_blueprint",
    "tick_signal",
    "tick_tween",
    "tick_spatial",
    "tick_event",
    "tick_atlas",
    "tick_ability",
    "tick_command",
    "tick_resource",
    "tick_physics",
    "tick_ai",
    "tick_llm",
]
exclude = ["tests/", "examples/"]
