[project]
name = "colony-sim"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.5.0",
    "tick>=0.2.1",
    "tick-colony>=0.3.0",
    "tick-schedule>=0.1.0",
    "tick-fsm>=0.1.0",
    "tick-blueprint>=0.2.0",
    "tick-signal>=0.1.0",
    "tick-tween>=0.1.0",
    "tick-spatial>=0.2.0",
    "tick-event>=0.1.0",
    "tick-atlas>=0.2.0",
    "tick-ability>=0.1.0",
    "tick-command>=0.1.0",
    "tick-resource>=0.1.0",
]

[tool.uv.sources]
tick = { path = "../../packages/tick", editable = true }
tick-colony = { path = "../../packages/tick-colony", editable = true }
tick-schedule = { path = "../../packages/tick-schedule", editable = true }
tick-fsm = { path = "../../packages/tick-fsm", editable = true }
tick-blueprint = { path = "../../packages/tick-blueprint", editable = true }
tick-signal = { path = "../../packages/tick-signal", editable = true }
tick-tween = { path = "../../packages/tick-tween", editable = true }
tick-spatial = { path = "../../packages/tick-spatial", editable = true }
tick-event = { path = "../../packages/tick-event", editable = true }
tick-atlas = { path = "../../packages/tick-atlas", editable = true }
tick-ability = { path = "../../packages/tick-ability", editable = true }
tick-command = { path = "../../packages/tick-command", editable = true }
tick-resource = { path = "../../packages/tick-resource", editable = true }
