[project]
name = "ecosystem-arena"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.5.0",
    "tick>=0.3.0",
    "tick-ai>=0.1.0",
    "tick-physics>=0.1.0",
]

[tool.uv.sources]
tick = { path = "../../packages/tick", editable = true }
tick-ai = { path = "../../packages/tick-ai", editable = true }
tick-physics = { path = "../../packages/tick-physics", editable = true }
